--- a/app/src/main/res/layout/activity_select_icon_user.xml
+++ b/app/src/main/res/layout/activity_select_icon_user.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,7 +36,6 @@
                     android:textSize="29dp" />
 
 
-
             </LinearLayout>
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -45,29 +43,26 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingTop="30dp"
                 android:paddingLeft="16dp"
+                android:paddingTop="30dp"
                 android:paddingRight="16dp">
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openCliente"
                     android:src="@drawable/alpinismo" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/basquete" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/boxe" />
 
             </LinearLayout>
@@ -84,21 +79,18 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/ciclismo" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/corrida" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/corrida_de_carro" />
 
             </LinearLayout>
@@ -116,25 +108,53 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/futebol" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/levantamento_peso" />
 
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="11dp"
-                    android:onClick="openFornecedores"
                     android:src="@drawable/tenis" />
 
 
             </LinearLayout>
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp"
+                android:paddingTop="40dp"
+                android:paddingRight="16dp">
+
+                <Button
+                    android:id="@+id/alterarBtnProduct"
+                    android:layout_width="150dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/tbx_estado"
+                    android:fontFamily="@font/allerstd"
+                    android:onClick="choiceConfirm"
+                    android:text="Salvar" />
+
+                <Button
+                    android:layout_width="150dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/tbx_estado"
+                    android:fontFamily="@font/allerstd"
+                    android:onClick="choiceConfirm"
+                    android:text="Cancelar" />
+
+            </LinearLayout>
+
 
         </TableLayout>
 
