--- a/app/src/main/res/layout/activity_conf_funcionario.xml
+++ b/app/src/main/res/layout/activity_conf_funcionario.xml
@@ -14,15 +14,12 @@
         android:layout_height="115dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23000002"
+        app:layout_constraintTop_toBottomOf="@+id/LblNomeFuncionarioText"
         app:srcCompat="@drawable/moldura_imagem" />
 
     <!--Titulo da pagina -->
@@ -36,17 +33,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
         android:text="adicionar novo"
         android:textColor="@color/colorPrimary"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/molduraIconFunc"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13999999" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/LblNomeFuncionarioText"
@@ -54,20 +49,17 @@
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
         android:text="Funcionário"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/molduraIconFunc"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintTop_toBottomOf="@+id/textTitlePageFuncionario" />
 
     <!--Descricao do funcionario-->
 
@@ -77,38 +69,27 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/allerstd"
         android:text="Nome"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/EditTextNomeFuncionario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintTop_toBottomOf="@+id/molduraIconFunc" />
 
 
     <EditText
         android:id="@+id/EditTextNomeFuncionario"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginBottom="353dp"
+        android:layout_width="258dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/tbx_nome"
         android:fontFamily="@font/allerstd"
         android:src="@drawable/tbx_nome"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/LblNomeFuncionarioText"
-        app:layout_constraintStart_toStartOf="@+id/LblDescNome"
         app:layout_constraintTop_toBottomOf="@+id/LblDescNome"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="9dp" />
 
     <TextView
         android:id="@+id/LblDescAniversario"
