--- a/app/src/main/res/layout/activity_conf_cliente.xml
+++ b/app/src/main/res/layout/activity_conf_cliente.xml
@@ -382,39 +382,44 @@
         android:id="@+id/LblDescCNPJ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginLeft="132dp"
         android:fontFamily="@font/allerstd"
         android:text="CPF"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="120dp"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="273dp" />
 
     <EditText
         android:id="@+id/EditTextCPFCliente"
         android:layout_width="116dp"
         android:layout_height="27dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/tbx_cpf"
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescCNPJ"
-        tools:layout_editor_absoluteX="122dp" />
+        app:layout_constraintStart_toEndOf="@+id/EditTextRGCliente"
+        app:layout_constraintTop_toBottomOf="@+id/LblDescCNPJ" />
 
     <TextView
         android:id="@+id/LblDescRG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="272dp"
         android:fontFamily="@font/allerstd"
         android:text="RG"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/EditTextRGCliente"
@@ -445,6 +450,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/btn_salvar"
         android:fontFamily="@font/allerstd"
+        android:onClick="salvar"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
