--- a/app/src/main/res/layout/activity_view_client.xml
+++ b/app/src/main/res/layout/activity_view_client.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/nameTxtFuncionario"
+        android:id="@+id/NameTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/nameTxtProduct2"
+        android:id="@+id/RgTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -89,7 +89,7 @@
         android:fontFamily="@font/allerstd"
         android:text="123456789"
         android:textColor="@android:color/black"
-        app:layout_constraintStart_toEndOf="@+id/nameTxtFuncionario"
+        app:layout_constraintStart_toEndOf="@+id/NameTxtCliente"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
@@ -117,10 +117,10 @@
         android:text="Telefone"
         android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct" />
+        app:layout_constraintTop_toBottomOf="@+id/AniversarioTxtCliente" />
 
     <TextView
-        android:id="@+id/categoryTxtProduct"
+        android:id="@+id/CpfTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginEnd="44dp"
@@ -133,7 +133,7 @@
 
 
     <TextView
-        android:id="@+id/categoryTxtProduct2"
+        android:id="@+id/EmailTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
         android:layout_marginEnd="16dp"
@@ -148,15 +148,17 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/allerstd"
         android:text="Aniversario"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/nameTxtFuncionario"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NameTxtCliente" />
 
     <TextView
-        android:id="@+id/dateBuytxtProduct"
+        android:id="@+id/AniversarioTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginLeft="16dp"
@@ -168,8 +170,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/dateBuytxtProduct2"
+        android:id="@+id/TelefoneTxtCliente"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/allerstd"
@@ -189,7 +192,7 @@
         android:text="Endereço"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryTxtProduct2" />
+        app:layout_constraintTop_toBottomOf="@+id/EmailTxtCliente" />
 
     <TextView
         android:id="@+id/textView8"
@@ -202,7 +205,7 @@
         android:text="Email"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryTxtProduct" />
+        app:layout_constraintTop_toBottomOf="@+id/CpfTxtCliente" />
 
     <TextView
         android:id="@+id/textView6"
@@ -214,11 +217,11 @@
         android:fontFamily="@font/allerstd"
         android:text="RG"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintStart_toEndOf="@+id/nameTxtFuncionario"
+        app:layout_constraintStart_toEndOf="@+id/NameTxtCliente"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/custtxtProduct2"
+        android:id="@+id/EnderecoTxtCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -251,6 +254,7 @@
         android:layout_marginStart="16dp"
         android:background="@drawable/tbx_estado"
         android:fontFamily="@font/allerstd"
+        android:onClick="AlterarCliente"
         android:text="Alterar Cliente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
