--- a/app/src/main/res/layout/activity_view_fornecedor.xml
+++ b/app/src/main/res/layout/activity_view_fornecedor.xml
@@ -56,12 +56,14 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/allerstd"
         android:text="Nome"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/nameTxtFornecedor"
@@ -98,10 +100,10 @@
         android:text="Telefone"
         android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct" />
+        app:layout_constraintTop_toBottomOf="@+id/dtaInauguracaotxtFornecedor" />
 
     <TextView
-        android:id="@+id/categoryTxtProduct2"
+        android:id="@+id/EmailTextFornecedor"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
         android:layout_marginEnd="16dp"
@@ -116,25 +118,29 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/allerstd"
         android:text="Aniversário"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/nameTxtFornecedor"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameTxtFornecedor" />
 
     <TextView
-        android:id="@+id/dateBuytxtProduct"
+        android:id="@+id/dtaInauguracaotxtFornecedor"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:fontFamily="@font/allerstd"
         android:text="01/01/1990"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/dateBuytxtProduct2"
+        android:id="@+id/telefoneTextFornecedor"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginLeft="16dp"
@@ -156,7 +162,7 @@
         android:text="Endereço"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryTxtProduct2" />
+        app:layout_constraintTop_toBottomOf="@+id/EmailTextFornecedor" />
 
     <TextView
         android:id="@+id/textView8"
@@ -185,7 +191,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/custtxtProduct2"
+        android:id="@+id/enderecoTextFornecedor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
