--- a/app/src/main/res/layout/adapter_list_clients.xml
+++ b/app/src/main/res/layout/adapter_list_clients.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:onClick="abrirVisualizacao"
         android:textSize="17sp"
         android:text="Nome" />
 
