Tela de realizar vendas ajustada

--- a/app/src/main/res/layout/activity_conf_estoque.xml
+++ b/app/src/main/res/layout/activity_conf_estoque.xml
@@ -37,6 +37,7 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/tbx_rg"
         android:fontFamily="@font/allerstd"
+        android:inputType="number"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,6 +163,7 @@
         android:background="@drawable/tbx_rua"
         android:clickable="false"
         android:fontFamily="@font/allerstd"
+        android:inputType="numberDecimal"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -180,6 +182,7 @@
         android:background="@drawable/tbx_bairro"
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
+        android:inputType="number"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.195"
@@ -215,7 +218,7 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/tbx_telefone2"
         android:fontFamily="@font/allerstd"
-        android:inputType="phone"
+        android:inputType="number"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -299,7 +302,7 @@
         android:background="@drawable/btn_salvar"
         android:fontFamily="@font/allerstd"
         android:visibility="visible"
-        android:onClick="AdcProduct"
+        android:onClick="salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
