--- a/app/src/main/res/layout/activity_adapter_fornecedores.xml
+++ b/app/src/main/res/layout/activity_adapter_fornecedores.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:orientation ="vertical"
+    tools:context=".adapter_fornecedores">
 
     <TextView
-        android:id="@+id/listNameCleint"
+        android:id="@+id/listNameFornecedor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -19,21 +22,20 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/listCpfClient"
+            android:id="@+id/listCnpjFornecedor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="@string/preco" />
+            android:text="CNPJ:" />
 
         <TextView
-            android:id="@+id/listIdClient"
+            android:id="@+id/listIdFornecedor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="openAddNewClient"
             android:textAlignment="viewEnd"
             android:layout_gravity="right"
-            android:text="@string/qtd"
+            android:text="Id:"
 
             />
 
