--- a/app/src/main/res/layout/activity_conf_cliente.xml
+++ b/app/src/main/res/layout/activity_conf_cliente.xml
@@ -320,13 +320,12 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="273dp" />
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/EditTextAniversarioCliente" />
+        app:layout_constraintTop_toBottomOf="@+id/EditTextAniversarioCliente"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="273dp" />
+
 
 
     <EditText
@@ -354,15 +353,7 @@
         android:id="@+id/LblDescRGCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="272dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+
         android:fontFamily="@font/allerstd"
         android:text="RG"
         android:textColor="@android:color/black"
@@ -402,7 +393,7 @@
         android:fontFamily="@font/allerstd"
         android:onClick="salvar"
         android:visibility="visible"
-        android:onClick="salvar"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
